services/scheduler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: scheduler
spec:
  ingressClassName: traefik
  rules:
    - host: airflow.vandelay
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: airflow-api-server
                port:
                  number: 8080
